@@ -1,167 +1,0 @@
-# File: tox.ini (Templated version)
-# Updated:  3-Jul-2019 jdw Cleanup
-#           8-Jul-2019 jdw Disable flake8 plugin (pydocstyle compat issue)
-#          11-Jul-2019 jdw Add placeholders for up to three test paths
-#
-[local_settings]
-# project specific local settings
-test_pattern = "test*.py"
-#
-# Source pathls (space separated list of files/directories) for linting and format checks
-source_paths = "rcsb/utils/io rcsb/utils/tests-io setup.py"
-#
-# Start directory path for test discovery
-# Each path must reference valid directory that is searchable by Python (i.e. contains __init__.py)
-#  ** It is harmless to point to paths containing no tests.
-#
-test_path_1 = "rcsb/utils/tests-io"
-# These are placeholders valid source directories without tests files
-test_path_2 = "rcsb/utils/io"
-test_path_3 = "rcsb/utils/io"
-#
-# Comma separate list of directories for which test coverage will be evaluated
-coverage_source_paths = "rcsb/utils/io,rcsb/utils/tests-io"
-coverage_cutoff = 65
-#
-## --------------------------------------------------------------------------
-##  ----------   No project specific setting beyond this point --------------
-##
-[tox]
-# The complete list of supported test environments to setup and invoke
-envlist = format_pep8-{linux,macos}-{py37}, lint_pylint-{linux,macos}-{py37}, format_black-{linux,macos}-{py37}, py{37,27}, test_coverage-{linux,macos}-{py37}
-#
-minversion = 3.4.0
-skip_missing_interpreters = True
-skip_install = False
-skipsdist = True
-
-[testenv]
-whitelist_externals = echo
-#skip_install = false
-deps = echo
-commands =
-    echo "Starting default tests in testenv"
-
-[testenv:py27]
-description = 'Run unit tests (unittest runner) using {envpython}'
-whitelist_externals = echo
-platform=
-       macos: darwin
-       linux: linux
-basepython =
-    py27: python2.7
-
-deps = echo
-       -r requirements.txt
-commands =
-    echo "Starting {envname}"
-    {envpython} -V
-    {envpython} -m unittest discover -v --start-directory {[local_settings]test_path_1} --pattern "{[local_settings]test_pattern}"
-    {envpython} -m unittest discover -v --start-directory {[local_settings]test_path_2} --pattern "{[local_settings]test_pattern}"
-    {envpython} -m unittest discover -v --start-directory {[local_settings]test_path_3} --pattern "{[local_settings]test_pattern}"
-    echo "Completed {envname}"
-
-[testenv:py37]
-description = 'Run unit tests (unittest runner) using {envpython}'
-whitelist_externals = echo
-platform=
-       macos: darwin
-       linux: linux
-basepython =
-    py37: python3.7
-
-deps = echo
-       -r requirements.txt
-
-commands =
-    echo "Starting {envname}"
-    {envpython} -V
-    {envpython} -m unittest discover -v --start-directory {[local_settings]test_path_1} --pattern "{[local_settings]test_pattern}"
-    {envpython} -m unittest discover -v --start-directory {[local_settings]test_path_2} --pattern "{[local_settings]test_pattern}"
-    {envpython} -m unittest discover -v --start-directory {[local_settings]test_path_3} --pattern "{[local_settings]test_pattern}"
-    echo "Completed {envname}"
-
-#
-[testenv:format_pep8]
-description = 'Run selected PEP8 compliance checks (flake8)'
-platform=
-       macos: darwin
-       linux: linux
-whitelist_externals = echo
-basepython = py37: python3.7
-#skip_install = true
-deps =
-    echo
-    flake8
-    # This plugin is no longer compatible with latest pydocstyles -
-    # flake8-docstrings>=0.2.7
-    flake8-import-order>=0.9
-    -r requirements.txt
-commands =
-    # Exceptions: D for docstrings, I for imports order and formatting, E302 is slice spacing  - W503 multiline spacing incompatible with black
-    flake8 --max-line-length=185 --ignore=D,I,E203,W503  {[local_settings]source_paths}
-
-#
-[testenv:lint_pylint]
-description = 'Run linting compliance checks (pylint)'
-platform=
-       macos: darwin
-       linux: linux
-whitelist_externals = echo
-basepython = py37: python3.7
-#skip_install = true
-deps =
-    echo
-    pylint
-    -r requirements.txt
-commands =
-    echo "Starting {envname}"
-    pylint --disable=R,C --reports=n --rcfile={toxinidir}/pylintrc  {[local_settings]source_paths}
-    echo "Completed {envname}"
-
-#
-[testenv:format_black]
-description = 'Run format compliance checks (black)'
-platform=
-       macos: darwin
-       linux: linux
-whitelist_externals = echo
-basepython = py37: python3.7
-deps =
-    echo
-    black>=19.3b0
-    -r requirements.txt
-    #    isort>=4.3.20
-commands =
-    echo "Starting {envname}"
-    black --check --line-length 180  {[local_settings]source_paths}
-    #    isort -rc rcsb/utils --check-only
-    echo "Completed {envname}"
-#changedir = {toxinidir}
-
-#
-[testenv:test_coverage-py37]
-description = 'Run test coverage analysis'
-platform=
-       macos: darwin
-       linux: linux
-whitelist_externals = echo
-basepython = py37: python3.7
-deps =
-    echo
-    coverage
-    -r requirements.txt
-
-commands =
-    echo "Starting {envname}"
-    coverage erase
-    coverage run --parallel-mode  --source="{[local_settings]coverage_source_paths}" -m unittest discover -v --start-directory  {[local_settings]test_path_1} --pattern "{[local_settings]test_pattern}"
-    coverage run --parallel-mode  --source="{[local_settings]coverage_source_paths}" -m unittest discover -v --start-directory  {[local_settings]test_path_2} --pattern "{[local_settings]test_pattern}"
-    coverage run --parallel-mode  --source="{[local_settings]coverage_source_paths}" -m unittest discover -v --start-directory  {[local_settings]test_path_3} --pattern "{[local_settings]test_pattern}"
-    echo " ------- Consolidating {envname} data ----------"
-    coverage combine
-    echo " ------- Building {envname} reports ----------"
-    coverage report --fail-under={[local_settings]coverage_cutoff}
-    - coverage xml
-    echo "Completed {envname}"
-#
